Add fonts and begin setting up styles

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,6 +1,7 @@
-// Body resets
-//
+// ===========================================================================
+// #BODY RESETS
 // Update the foundational and global aspects of the page.
+// ===========================================================================
 
 * {
   -webkit-box-sizing: border-box;
