--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -1,7 +1,8 @@
-// Code
-//
+// ===========================================================================
+// #CODE
 // Inline and block-level code snippets. Includes tweaks to syntax highlighted
 // snippets from Pygments/Rouge and Gist embeds.
+// ===========================================================================
 
 code,
 pre {
