--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -1,7 +1,8 @@
-// Posts and pages
-//
-// Each post is wrapped in `.post` and is used on default and post layouts. Each
-// page is wrapped in `.page` and is only used on the page layout.
+// ===========================================================================
+// #POSTS & PAGES
+// Each post is wrapped in `.post` and is used on default and post layouts.
+// Each page is wrapped in `.page` and is only used on the page layout.
+// ===========================================================================
 
 .page,
 .post {
