--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,8 +9,9 @@
       {{ page.title }} &middot; {{ site.title }}
     {% endif %}
   </title>
-
+  
   <link rel="stylesheet" href="{{ site.baseurl }}/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Eczar:700" rel="stylesheet">
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-precomposed.png">
   <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.baseurl }}/feed.xml">
