--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,13 +1,19 @@
-// Layout
-//
+// ===========================================================================
+// #LAYOUT
 // Styles for managing the structural hierarchy of the site.
+// ===========================================================================
 
 .container {
-  max-width: 38rem;
+  max-width: 100%;
   padding-left:  1.5rem;
   padding-right: 1.5rem;
-  margin-left:  auto;
+  margin-left: auto;
   margin-right: auto;
+}
+
+.container--small {
+  @extend .container;
+  max-width: 38rem;
 }
 
 footer {
