--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -1,6 +1,7 @@
-// Masthead
-//
-// Super small header above the content for site name and short description.
+// ===========================================================================
+// #MASTHEAD
+// Super small header above the content for site name
+// ===========================================================================
 
 .masthead {
   padding-top:    1rem;
