Home page content & layout
Needs more polish ✨

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -32,7 +32,7 @@ $link-color: $blue;
 $border-color: $white;
 
 $large-breakpoint: 38em;
-$large-font-size: 20px;
+$large-font-size: 18px;
 
-$code-font-family: Menlo, Monaco, "Courier New", monospace;
+$code-font-family: "Anonymous Pro", Menlo, Monaco, "Courier New", monospace;
 $code-color: #bf616a;
