--- a/main.scss
+++ b/main.scss
@@ -5,9 +5,14 @@
 
 @import "variables";
 @import "base";
+@import "animations";
 @import "type";
 @import "syntax";
 @import "code";
 @import "layout";
+@import "buttons";
+@import "lists";
 @import "masthead";
 @import "posts";
+@import "muke-zag";
+@import "home";
