--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,15 +2,16 @@
 <html lang="en">
   {% include head.html %}
 
-  <body>
+  <body class="page-{{ page.title }}">
 
     <div class="container content">
+      {% if page.title != "Home" %}
       <header class="masthead">
         <h3 class="masthead-title">
           <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
         </h3>
       </header>
-
+      {% endif %}
       <main>
         {{ content }}
       </main>
