--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,6 +19,8 @@ html {
   font-family: $root-font-family;
   font-size: $root-font-size;
   line-height: $root-line-height;
+  -webkit-font-smoothing: antialiased;
+  position: relative;
 
   @media (min-width: $large-breakpoint) {
     font-size: $large-font-size;
@@ -30,6 +32,12 @@ body {
   background-color: $body-bg;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
+      
+  overflow-x: hidden;
+  
+  &.page-Home {
+    animation: bgFade 2500ms ease-in-out forwards;
+  }
 }
 
 // No `:visited` state is required by default (browsers will use `a`)
