--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,7 +4,7 @@
 // ===========================================================================
 
 .container {
-  max-width: 100%;
+  max-width: 72.222222222rem;
   padding-left:  1.5rem;
   padding-right: 1.5rem;
   margin-left: auto;
@@ -17,5 +17,18 @@
 }
 
 footer {
-  margin-bottom: 2rem;
+  margin: 2rem auto;
 }
+
+// Fullscreen div
+
+.fullscreen {
+  height: 45rem;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
