--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -1,6 +1,6 @@
-// ===========================================================================
-// #BUTTONS
-// ===========================================================================
+/* ===========================================================================*/
+/* #BUTTONS*/
+/* ===========================================================================*/
 
 .button {
   position: relative;
@@ -14,6 +14,7 @@
     z-index: -1;
     height: 0.6em;
     background-color: #fff;
+    -webkit-transition: all .175s ease;
     transition: all .175s ease;
   }
   
@@ -24,7 +25,8 @@
     &:before {
       bottom: -0.15em;
       left: 0.5em;
-      filter: blur(4px);
+      -webkit-filter: blur(4px);
+              filter: blur(4px);
     }
   }
 }
