--- a/_sass/_lists.scss
+++ b/_sass/_lists.scss
@@ -1,14 +1,14 @@
-// ===========================================================================
-// #LISTS
-// DL, UL, OL
-// ===========================================================================
+/* ===========================================================================*/
+/* #LISTS*/
+/* DL, UL, OL*/
+/* ===========================================================================*/
 
-// Variables
+/* Variables*/
 
 $indent: 1.2em;
 $list-break: 2em;
 
-// Lists
+/* Lists*/
 
 .simple-list {
   list-style: none;
