--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -1,7 +1,7 @@
-// ===========================================================================
-// #MASTHEAD
-// Super small header above the content for site name
-// ===========================================================================
+/* ===========================================================================*/
+/* #MASTHEAD*/
+/* Super small header above the content for site name*/
+/* ===========================================================================*/
 
 .masthead {
   padding-top:    1rem;
