--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,12 +1,10 @@
-// ===========================================================================
-// #BODY RESETS
-// Update the foundational and global aspects of the page.
-// ===========================================================================
+/* ===========================================================================*/
+/* #BODY RESETS*/
+/* Update the foundational and global aspects of the page.*/
+/* ===========================================================================*/
 
 * {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
@@ -36,16 +34,17 @@ body {
   overflow-x: hidden;
   
   &.page-Home {
-    animation: bgFade 2500ms ease-in-out forwards;
+    -webkit-animation: bgFade 2500ms ease-in-out forwards;
+            animation: bgFade 2500ms ease-in-out forwards;
   }
 }
 
-// No `:visited` state is required by default (browsers will use `a`)
+/* No `:visited` state is required by default (browsers will use `a`)*/
 a {
   color: $link-color;
   text-decoration: none;
 
-  // `:focus` is linked to `:hover` for basic accessibility
+  /* `:focus` is linked to `:hover` for basic accessibility*/
   &:hover,
   &:focus {
     text-decoration: underline;
