--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,9 +1,9 @@
-// ===========================================================================
-// #HOME
-// ===========================================================================
+/* ===========================================================================*/
+/* #HOME*/
+/* ===========================================================================*/
 
 .home-bio {
-  // position: relative;
+  /* position: relative;*/
   margin-bottom: 8em;
 }
 
@@ -29,7 +29,9 @@
   right: 1vw;
   z-index: -2;
   opacity: 0;
-  animation: fadeIn 2000ms ease-in-out forwards;
-  animation-delay: 1000ms;
+  -webkit-animation: fadeIn 2000ms ease-in-out forwards;
+          animation: fadeIn 2000ms ease-in-out forwards;
+  -webkit-animation-delay: 1000ms;
+          animation-delay: 1000ms;
 }
 
