--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,7 +1,7 @@
-// ===========================================================================
-// #LAYOUT
-// Styles for managing the structural hierarchy of the site.
-// ===========================================================================
+/* ===========================================================================*/
+/* #LAYOUT*/
+/* Styles for managing the structural hierarchy of the site.*/
+/* ===========================================================================*/
 
 .container {
   max-width: 72.222222222rem;
@@ -20,15 +20,21 @@ footer {
   margin: 2rem auto;
 }
 
-// Fullscreen div
+/* Fullscreen div*/
 
 .fullscreen {
   height: 45rem;
   height: 100vh;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   text-align: center;
 }
 
