--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -1,8 +1,8 @@
-// ===========================================================================
-// #POSTS & PAGES
-// Each post is wrapped in `.post` and is used on default and post layouts.
-// Each page is wrapped in `.page` and is only used on the page layout.
-// ===========================================================================
+/* ===========================================================================*/
+/* #POSTS & PAGES*/
+/* Each post is wrapped in `.post` and is used on default and post layouts.*/
+/* Each page is wrapped in `.page` and is only used on the page layout.*/
+/* ===========================================================================*/
 
 .page,
 .post {
@@ -13,7 +13,7 @@
   }
 }
 
-// Blog post or page title
+/* Blog post or page title*/
 .page-title,
 .post-title,
 .post-title a {
@@ -24,7 +24,7 @@
   margin-top: 0;
 }
 
-// Meta data line below post title
+/* Meta data line below post title*/
 .post-date {
   display: block;
   margin-top: -.5rem;
@@ -33,7 +33,7 @@
 }
 
 
-// Related posts
+/* Related posts*/
 .related {
   padding-top: 2rem;
   padding-bottom: 2rem;
