--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -1,7 +1,7 @@
-// ===========================================================================
-// #TYPOGRAPHY
-// Headings, body text, lists, and other misc typographic elements.
-// ===========================================================================
+/* ===========================================================================*/
+/* #TYPOGRAPHY*/
+/* Headings, body text, lists, and other misc typographic elements.*/
+/* ===========================================================================*/
 
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
@@ -87,11 +87,11 @@ blockquote {
 }
 
 
-// Markdown footnotes
-//
-// See the example content post for an example.
+/* Markdown footnotes*/
+/**/
+/* See the example content post for an example.*/
 
-// Footnote number within body text
+/* Footnote number within body text*/
 a[href^="#fn:"],
 // Back to footnote link
 a[href^="#fnref:"] {
@@ -100,15 +100,15 @@ a[href^="#fnref:"] {
   font-weight: bold;
 }
 
-// List of footnotes
+/* List of footnotes*/
 .footnotes {
   margin-top: 2rem;
   font-size: 85%;
 }
 
-// Custom type
-//
-// Extend paragraphs with `.lead` for larger introductory text.
+/* Custom type*/
+/**/
+/* Extend paragraphs with `.lead` for larger introductory text.*/
 
 .lead {
   font-size: 1.25rem;
