--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,20 +7,12 @@
     <div class="container content">
       {% if page.title != "Home" %}
       <header class="masthead">
-        <h3 class="masthead-title">
-          <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-        </h3>
+        <a href="{{ site.baseurl }}/" class="masthead-title button" title="Home">{{ site.title }}</a>
       </header>
       {% endif %}
       <main>
         {{ content }}
       </main>
-
-      <footer class="footer">
-        <small>
-          &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights reserved.
-        </small>
-      </footer>
     </div>
 
     {% if site.analytics_id %}
