--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -8,7 +8,7 @@
   &:before {
     content: '';
     position: absolute;
-    bottom: 0;
+    bottom: -0.15em;
     left: 0.35em;
     width: 101%;
     z-index: -1;
