--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,7 +18,6 @@ html {
   font-size: $root-font-size;
   line-height: $root-line-height;
   -webkit-font-smoothing: antialiased;
-  position: relative;
 
   @media (min-width: $large-breakpoint) {
     font-size: $large-font-size;
@@ -26,17 +25,11 @@ html {
 }
 
 body {
+  @extend .cf;
   color: $body-color;
   background-color: $body-bg;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
-      
-  overflow-x: hidden;
-  
-  &.page-Home {
-    -webkit-animation: bgFade 2500ms ease-in-out forwards;
-            animation: bgFade 2500ms ease-in-out forwards;
-  }
 }
 
 /* No `:visited` state is required by default (browsers will use `a`)*/
